# MLOPs-TSA

./: .gitignore  Dockerfile.serve  Dockerfile.train  README.md  batch_infer.py  batch_input.csv  batch_pipeline.py  config.py  experiment_notes.md  model_registry.yaml  pyproject.toml  serve.py
data/raw/: .gitignore  AirPassengers.csv.dvc
logs/: batch_inference_log.csv  inference_log.csv
src/: train.py  train_flow.py
